<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFE0B5"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".AddNoteActivity">

    <TextView
        android:id="@+id/addNoteHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins"
        android:text="@string/add_note"
        android:textColor="@color/design_default_color_error"
        android:textSize="28sp" />

    <ImageView
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/addNoteHeading"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="6dp"
        android:backgroundTint="@color/white"
        android:src="@drawable/baseline_done_24" />

    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/addNoteHeading"
        android:layout_marginTop="16dp"
        android:background="@drawable/orange_border"
        android:fontFamily="@font/poppins"
        android:hint="@string/enter_the_title"
        android:maxLines="1"
        android:padding="12dp"
        android:textColor="#121111"
        android:textSize="20sp" />


    <EditText
        android:id="@+id/contentEditText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/titleEditText"
        android:layout_marginTop="12dp"
        android:background="@drawable/orange_border"
        android:fontFamily="@font/poppins"
        android:gravity="top"
        android:hint="@string/enter_the_descriptiom_n"
        android:padding="12dp"
        android:textColor="#121111"
        android:textSize="18sp" />


</RelativeLayout>